k8s/app/networkpolicy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qover-app-egress
  namespace: qover
spec:
  podSelector:
    matchLabels:
      app: qover-app
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongo
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
